--- a/index.html
+++ b/index.html
@@ -632,6 +632,12 @@
 							<div class="dialogContent">
 								<ul class="text-center left">
 									<li>
+										<p class="micro text-blueGrey margin-0 padding-0">2018-06-28</p>
+										<a href="http://www.anpdm.com/newsletterweb/45475946734946594778434359/42465F427140465940724240514471" target="_blank" class="text-blue bold small">
+											Besiktningsbranschen ska utvecklas och synas!
+										</a>
+									</li>
+									<li>
 										<p class="micro text-blueGrey margin-0 padding-0">2018-04-11</p>
 										<a href="http://www.anpdm.com/newsletterweb/45415F4675434A5A4074404759/42455D4570424B5B4B7142405F4B71" target="_blank" class="text-blue bold small">
 											Förstörelsen av Pålsundet
