--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -186,30 +186,33 @@
 								</h3>
 								<div class="margin-left-2">
 									<a href="https://medium.com/besiktningsbloggen/sluta-betala-oss-de0640a6b6c9">
-										<p class="common-Link" style="margin-top: 15px;">Sluta betala oss!</p>
+										<p class="common-Link">Sluta betala oss!</p>
 									</a>
 									<a href="https://medium.com/besiktningsbloggen/har-du-byggkort-e2adb48b2508">
-										<p class="common-Link" style="margin-top: 15px;">Har du byggkort?!</p>
+										<p class="common-Link">Har du byggkort?!</p>
 									</a>
 									<a href="https://medium.com/@magnusjanson/dags-att-sluta-subventionera-byggfel-e6a3f8f17a90">
-										<p class="common-Link" style="margin-top: 15px;">Dags att sluta subventionera byggfel!</p>
+										<p class="common-Link">Dags att sluta subventionera byggfel!</p>
 									</a>
 									<a href="https://medium.com/@magnusjanson/st%C3%A4ll-skall-krav-%C3%A4ven-p%C3%A5-best%C3%A4llaren-ab0fcb0c9f20">
-										<p class="common-Link" style="margin-top: 15px;">Ställ Skall-krav även på beställaren!</p>
+										<p class="common-Link">Ställ Skall-krav även på beställaren!</p>
 									</a>
 									<a href="https://medium.com/besiktningsbloggen/lonsammare-projekt-c8f9adba4e2">
-										<p class="common-Link" style="margin-top: 15px;">Ska vi ha en billig besiktning — eller tjäna pengar på den?</p>
+										<p class="common-Link">Ska vi ha en billig besiktning — eller tjäna pengar på den?</p>
 									</a>
 								</div>
 								<h3 class="pad-header margin-0">
 									Nyhetsbrevet Byggintelligens
 								</h3>
 								<div class="margin-left-2">
+									<a href="http://www.anpdm.com/newsletterweb/45475946734946594778434359/42465F427140465940724240514471">
+										<p class="common-Link">Besiktningsbranschen ska utvecklas och synas!</p>
+									</a>
 									<a href="http://www.anpdm.com/newsletterweb/45415F4675434A5A4074404759/42455D4570424B5B4B7142405F4B71">
-										<p class="common-Link" style="margin-top: 15px;">Förstörelsen av Pålsundet</p>
+										<p class="common-Link">Förstörelsen av Pålsundet</p>
 									</a>
 									<a href="http://www.anpdm.com/newsletterweb/45435F43724742584470444B59/42465F427140465940724240514471?noTracking=true">
-										<p class="common-Link" style="margin-top: 15px;">Nu samlar vi kraft för 2018!</p>
+										<p class="common-Link">Nu samlar vi kraft för 2018!</p>
 									</a>
 								</div>
 							</div>
