updated news page with career link

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -225,7 +225,19 @@
 						</h2>
 						<!-- newsflow list / latest first -->
 						<div class="fix-5-12 fromRight" id="news" style="padding: 20px;">
-							<div >
+							<div class="fromLeft left">
+								<h3>Är du vår nästa kollega?</h3>
+								<p>
+									Har du något eller några års erfarenhet från byggbranschen och vill ta nästa steg i karriären där du får möjlighet att själv koordinera både större och mindre besiktningsprojekt inom bygg- och fastighetsbranschen?
+								</p>
+								<div class="fromLeft left">
+									<p>Om det låter som du, gå gärna till ansökssidan och hör av dig!</p>
+									<a href="https://jobs.academicwork.se/annons/projektkoordinator-till-familjara-besiktningsmanse/15009775">
+										<p class="common-Link">Gå till ansökan</p>
+									</a>
+								</div>
+							</div>
+							<div class="fromLeft left">
 								<h3>Kv Ektorp, Nacka</h3>
 								<p>
 									ByggVesta planerar att uppföra 207 studentlägenheter i Ektorp, Nacka.
@@ -237,7 +249,7 @@
 									<p class="micro text-blueGrey center">Ektorp, Nacka</p>
 								</div>
 							</div>
-							<div >
+							<div class="fromLeft left">
 								<h3>BRF Bergkristallen, Falun</h3>
 								<p>
 									SHH Bostad planerar att bygga 34 bostäder i Falun.
@@ -249,7 +261,7 @@
 									<p class="micro text-blueGrey center">Bergkristallen i Falun</p>
 								</div>
 							</div>
-							<div >
+							<div class="fromLeft left">
 								<h3>Rinkebyterrassen, Rinkeby</h3>
 								<p>
 									Rinkebyterrassen är nu färdigställd och hade invigning under helgen den 15 till 16 september.
@@ -260,7 +272,7 @@
 								</div>
 							</div>
 
-							<div>
+							<div class="fromLeft left">
 								<h3>Backåkra, Norra Djurgårdsstaden</h3>
 								<p>
 									I mars 2017 byggstartades Einar Mattssons projekt Backåkra med 81 hyresrättslägenheter i Norra Djurgårdsstaden i Stockholm. Besiktningsman.se utför här entreprenadbesiktning med iSpect, en metod som redan används i ett 50-tal olika projekt.
