Restyle of career page + announcement badge for the career link

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -174,22 +174,34 @@
 
 		</div>
 	</nav>
-
+	<!-- HEADER STRIPES -->
+	<div class="StripeBackground">
+	    <div class="stripe s0"></div>
+	    <div class="stripe s2"></div>
+	    <div class="stripe s3"></div>
+	    <div class="stripe s4"></div>
+	</div>
 	<!-- HEADER -->
-	<section class="slide fade" id="career">
+	<section class="slide" id="career" style="background: transparent;">
 		<div class="content">
 			<div class="container">
 
 				<div class="container-lg center margin-top-1">
-					<h1>Sveriges ledande entreprenadbesiktningsföretag <br>söker fler besiktningsmän!</h1>
+					<h1 class="common-IntroText">Sveriges ledande entreprenadbesiktningsföretag <br>söker fler besiktningsmän!</h1>
+					<div class="announcement">
+	          <span class="new-pill">OBS</span>
+	          <span class="message">
+	             Vi söker även: <a href="https://jobs.academicwork.se/annons/projektkoordinator-till-familjara-besiktningsmanse/15009775" class="common-Link">Projektkoordinator</a>
+	          </span>
+					</div>
 					<div class="pad shadow">
 
 						<div class="left fromLeft fix-5-12 text-blueGrey">
-							<h3 class="small">Vill du...</h3>
-							<p class="small">• Utveckla din kompetens i ett trivsamt och intressant företag? </p>
-							<p class="small">• Arbeta i det företag som leder branschens förnyelse?</p>
-							<p class="small">• Kunna belönas bra för ambitiösa arbetsinsatser?</p>
-							<p class="small">• Bli medarbetare oavsett var i landet du bor?</p>
+							<h2 class="common-BodyTitle">Vill du...</h2>
+							<p class="common-BodyText">• Utveckla din kompetens i ett trivsamt och intressant företag? </p>
+							<p class="common-BodyText">• Arbeta i det företag som leder branschens förnyelse?</p>
+							<p class="common-BodyText">• Kunna belönas bra för ambitiösa arbetsinsatser?</p>
+							<p class="common-BodyText">• Bli medarbetare oavsett var i landet du bor?</p>
 							<a class="typeform-share common-Button blue" href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank">Ta kontakt med oss!</a>
 							<script>
 								(function() {
@@ -218,7 +230,6 @@
 
 			</div>
 		</div>
-		<div class="background" style="background-image:url(../assets/img/backgrounds/foundations.jpg)"></div>
 	</section>
 
 	<!-- Footer -->
