fixing the landing header buttons for mobile version

--- a/index.html
+++ b/index.html
@@ -193,19 +193,20 @@
 	</nav>
 
 	<!-- HEADER -->
-	<section class="slide fade autoHeight" data-name="home" id="">
+	<section class="slide fade autoHeight" data-name="home" id="mainLanding">
 		<div class="content">
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
 
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<img src="assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="border-bottom" style="border-bottom: none;">
+						<img src="assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="main-Logo">
 						<p class="hero">Sveriges ledande entreprenadbesiktningsföretag</p>
-						<a href="#entreprenad" class="common-Button text-blue fromCenter">ENTREPRENAD</a>
-						<a href="#brf" class="common-Button text-blue fromCenter">brf</a>
-						<a href="#privat" class="common-Button text-blue fromCenter">PRIVAT</a>
-						<br>
-						<br>
+						<ul>
+							<li><a href="#entreprenad" class="common-Button text-blue fromCenter margin-bottom-1">ENTREPRENAD</a></li>
+							<li><a href="#brf" class="common-Button text-blue fromCenter margin-bottom-1">brf</a></li>
+							<li><a href="#privat" class="common-Button text-blue fromCenter margin-bottom-1">PRIVAT</a></li>
+						</ul>
+
 						<a href="tel:0101654000" id="mobilePhoneNumber">
 							<p style="margin-bottom: 0;opacity: 1;">Växeln öppen mellan 08:30 - 17:00</p>
 							<p class="bold" style="opacity: 1;">Ring 010-165 40 00</p>
