Activated the privatsector contact info again

--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -189,12 +189,12 @@
 						<p>
 							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster<br> för entreprenadbesiktning för nyproduktion och ROT samt KA.
 						</p>
-						<div class="announcement white">
+						<!-- <div class="announcement white">
 		          <span class="new-pill">OBS</span>
 		          <span class="message">
 		              Besiktningstjänsterna för privatpersoner är för tillfället fullbokade.
 		          </span>
-						</div>
+						</div> -->
 					</div>
 
 				</div>
@@ -473,24 +473,24 @@
 
 	</section>
 	<section class="slide white form-section">
-		<div class="margin-0 center">
+		<!-- <div class="margin-0 center">
 			<div class="announcement">
 				<span class="new-pill">OBS</span>
 				<span class="message left">
 						Besiktningstjänsterna för privatpersoner är för tillfället fullbokade.
 				</span>
 			</div>
-		</div>
+		</div> -->
 		<div class="container-lg">
 				<div class="formBackground form-column">
-					<div class="inactive-Overlay">
+					<!-- <div class="inactive-Overlay"></div> -->
 						<h3 class="pad-header margin-0 text-blueGrey center">
 							Redo att boka?
 							<p class="small bold dark margin-0 common-BodyText" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
 						</h3>
 						<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/vHXN4C" data-transparency="100" data-hide-headers=true style="width: 100%; height: 400px;"></div>
 						<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-					</div>
+
 				</div>
 				<div class="secondary-column">
 
