--- a/index.html
+++ b/index.html
@@ -452,14 +452,14 @@
 									<a href="tjanster/privat/">
 										<p class="common-Link">Gå till tjänster för privatpersoner<i class="icono-arrow2-left"></i></p>
 									</a>
-									<!-- <p>Frågor? Lämna ett meddelande så hjälper vi dig!</p>
+									<p>Frågor? Lämna ett meddelande så hjälper vi dig!</p>
 									<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
 										Lämna ett meddelande
 									</a>
 									<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 									<a href="tel:0101654000">
 										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-									</a> -->
+									</a>
 								</div>
 							</li>
 							<li class="col-6-12 left fromRight">
