Tried updating the pages with https links instead of http

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<!-- End Google Tag Manager -->
 	<!-- google site verification -->
 	<meta name="google-site-verification" content="uIsQeRnTuJtqD_rORyLb6GKgVNufjeEkczKMFszRIO4" />
-	<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
+	<!-- Begin Cookie Consent plugin by Silktide - https://silktide.com/cookieconsent -->
 	<script defer type="text/javascript">
 		window.cookieconsent_options = {
 			"message": "Besiktningsman.se använder 'cookies' för att kunna leverera en bra upplevelse.",
@@ -84,7 +84,7 @@
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 	<!-- SVG Library -->
-	<svg xmlns="http://www.w3.org/2000/svg" style="display:none">
+	<svg xmlns="https://www.w3.org/2000/svg" style="display:none">
 	  <symbol id="close" viewBox="0 0 30 30"><path d="M15 0c-8.3 0-15 6.7-15 15s6.7 15 15 15 15-6.7 15-15-6.7-15-15-15zm5.7 19.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3s-.5-.1-.7-.3l-4.3-4.3-4.3 4.3c-.2.2-.4.3-.7.3s-.5-.1-.7-.3c-.4-.4-.4-1 0-1.4l4.3-4.3-4.3-4.3c-.4-.4-.4-1 0-1.4s1-.4 1.4 0l4.3 4.3 4.3-4.3c.4-.4 1-.4 1.4 0s.4 1 0 1.4l-4.3 4.3 4.3 4.3z"/></symbol>
 	  <symbol id="close-small" viewBox="0 0 11 11"><path d="M6.914 5.5l3.793-3.793c.391-.391.391-1.023 0-1.414s-1.023-.391-1.414 0l-3.793 3.793-3.793-3.793c-.391-.391-1.023-.391-1.414 0s-.391 1.023 0 1.414l3.793 3.793-3.793 3.793c-.391.391-.391 1.023 0 1.414.195.195.451.293.707.293s.512-.098.707-.293l3.793-3.793 3.793 3.793c.195.195.451.293.707.293s.512-.098.707-.293c.391-.391.391-1.023 0-1.414l-3.793-3.793z"/></symbol>
 	  <symbol id="arrow-left" viewBox="0 0 31 72"><path d="M30 72c-.3 0-.6-.1-.8-.4l-29-34c-.3-.4-.3-.9 0-1.3l29-36c.3-.4 1-.5 1.4-.2.4.3.5 1 .2 1.4l-28.5 35.5 28.5 33.4c.4.4.3 1.1-.1 1.4-.2.1-.5.2-.7.2z"/></symbol>
@@ -129,13 +129,13 @@
 			<div class="left">
 				<a href="../"><img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
-			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
+			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="https://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
 	</nav>
 
 	<!-- Sidebar -->
 	<nav class="sidebar white" data-sidebar-id="1">
-		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
+		<div class="close"><svg><use xmlns:xlink="https://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
 		<div class="content">
 			<a href="../" class="logo"><img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
@@ -199,7 +199,7 @@
 				<div class="wrap">
 
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<img src="assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="main-Logo">
+						<img src="/assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="main-Logo">
 						<p class="hero">Sveriges ledande entreprenadbesiktningsföretag</p>
 						<ul>
 							<li><a href="#entreprenad" class="common-Button text-blue fromCenter margin-bottom-1">ENTREPRENAD</a></li>
@@ -275,12 +275,12 @@
 
 										<ul class="slider clickable autoplay fromAbove Quote common-Card" data-slider-interval="5000" data-slider-stoponclick="false" data-slider-id="83">
 											<div class="leftControl-83 fromLeft" data-slider-id="83" data-slider-action="prev">
-												<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32">
+												<svg xmlns="https://www.w3.org/2000/svg" width="32" height="32">
 												  <path fill="#6772E5" d="M 5.67 6 h 9.83 a 1.5 1.5 0 1 1 0 3 H 5.67 l 3.44 3.44 a 1.5 1.5 0 0 1 0 2.12 c -0.59 0.59 -1.53 0.59 -2.11 0 L 0 7.5 L 7 0.44 a 1.49 1.49 0 0 1 2.1 0 a 1.5 1.5 0 0 1 0 2.12 L 5.68 6 Z"/>
 												</svg>
 											</div>
 											<div class="rightControl-83 fromRight" data-slider-id="83" data-slider-action="next">
-												<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32">
+												<svg xmlns="https://www.w3.org/2000/svg" width="32" height="32">
 												  <path fill="#6772E5" d="M 11.33 6 H 1.5 a 1.5 1.5 0 1 0 0 3 h 9.83 l -3.44 3.44 a 1.5 1.5 0 0 0 0 2.12 c 0.59 0.59 1.53 0.59 2.11 0 l 7 -7.06 l -7 -7.06 a 1.49 1.49 0 0 0 -2.1 0 a 1.5 1.5 0 0 0 0 2.12 L 11.32 6 Z"/>
 												</svg>
 											</div>
@@ -556,7 +556,7 @@
 				</div>
 			</div>
 		</div>
-		<p class="text-blueGrey center-m-down bold" style="font-size:13px;">© Besiktningsman.se - <a href="http://sebastianselling.com/" tabindex="_blank">Design av Sebastian Selling</a></p>
+		<p class="text-blueGrey center-m-down bold" style="font-size:13px;">© Besiktningsman.se - <a href="https://sebastianselling.com/" tabindex="_blank">Design av Sebastian Selling</a></p>
 	</section>
 	<!-- POPUP WITH LINKS TO NEWSLETTER TEXTS -->
 	<div class="popup hidden" data-popup-id="docs" id="docs">
@@ -634,19 +634,19 @@
 								<ul class="text-center left">
 									<li>
 										<p class="micro text-blueGrey margin-0 padding-0">2018-06-28</p>
-										<a href="http://www.anpdm.com/newsletterweb/45475946734946594778434359/42465F427140465940724240514471" target="_blank" class="text-blue bold small">
+										<a href="https://www.anpdm.com/newsletterweb/45475946734946594778434359/42465F427140465940724240514471" target="_blank" class="text-blue bold small">
 											Besiktningsbranschen ska utvecklas och synas!
 										</a>
 									</li>
 									<li>
 										<p class="micro text-blueGrey margin-0 padding-0">2018-04-11</p>
-										<a href="http://www.anpdm.com/newsletterweb/45415F4675434A5A4074404759/42455D4570424B5B4B7142405F4B71" target="_blank" class="text-blue bold small">
+										<a href="https://www.anpdm.com/newsletterweb/45415F4675434A5A4074404759/42455D4570424B5B4B7142405F4B71" target="_blank" class="text-blue bold small">
 											Förstörelsen av Pålsundet
 										</a>
 									</li>
 									<li>
 										<p class="micro text-blueGrey margin-0 padding-0">2017-12-13</p>
-										<a href="http://www.anpdm.com/newsletterweb/45435F43724742584470444B59/42465F427140465940724240514471?noTracking=true" target="_blank" class="text-blue bold small">
+										<a href="https://www.anpdm.com/newsletterweb/45435F43724742584470444B59/42465F427140465940724240514471?noTracking=true" target="_blank" class="text-blue bold small">
 											Nu samlar vi kraft för 2018!
 										</a>
 									</li>
