--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -70,7 +70,7 @@
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 	<!-- SVG Library -->
-	<svg xmlns="http://www.w3.org/2000/svg" style="display:none">
+	<svg xmlns="https://www.w3.org/2000/svg" style="display:none">
 	  <symbol id="close" viewBox="0 0 30 30"><path d="M15 0c-8.3 0-15 6.7-15 15s6.7 15 15 15 15-6.7 15-15-6.7-15-15-15zm5.7 19.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3s-.5-.1-.7-.3l-4.3-4.3-4.3 4.3c-.2.2-.4.3-.7.3s-.5-.1-.7-.3c-.4-.4-.4-1 0-1.4l4.3-4.3-4.3-4.3c-.4-.4-.4-1 0-1.4s1-.4 1.4 0l4.3 4.3 4.3-4.3c.4-.4 1-.4 1.4 0s.4 1 0 1.4l-4.3 4.3 4.3 4.3z"/></symbol>
 	  <symbol id="close-small" viewBox="0 0 11 11"><path d="M6.914 5.5l3.793-3.793c.391-.391.391-1.023 0-1.414s-1.023-.391-1.414 0l-3.793 3.793-3.793-3.793c-.391-.391-1.023-.391-1.414 0s-.391 1.023 0 1.414l3.793 3.793-3.793 3.793c-.391.391-.391 1.023 0 1.414.195.195.451.293.707.293s.512-.098.707-.293l3.793-3.793 3.793 3.793c.195.195.451.293.707.293s.512-.098.707-.293c.391-.391.391-1.023 0-1.414l-3.793-3.793z"/></symbol>
 	  <symbol id="arrow-left" viewBox="0 0 31 72"><path d="M30 72c-.3 0-.6-.1-.8-.4l-29-34c-.3-.4-.3-.9 0-1.3l29-36c.3-.4 1-.5 1.4-.2.4.3.5 1 .2 1.4l-28.5 35.5 28.5 33.4c.4.4.3 1.1-.1 1.4-.2.1-.5.2-.7.2z"/></symbol>
@@ -113,13 +113,13 @@
 			<div class="left">
 				<a href="../"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
-			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
+			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="https://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
 	</nav>
 
 	<!-- Sidebar -->
 	<nav class="sidebar white" data-sidebar-id="1">
-		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
+		<div class="close"><svg><use xmlns:xlink="https://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
 		<div class="content">
 			<a href="../" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
@@ -402,7 +402,7 @@
       </div>
     </div>
   </div>
-	<p class="text-blueGrey center-m-down bold" style="font-size:13px;">© Besiktningsman.se - <a href="http://sebastianselling.com/" target="_blank">Design av Sebastian Selling</a></p>
+	<p class="text-blueGrey center-m-down bold" style="font-size:13px;">© Besiktningsman.se - <a href="https://sebastianselling.com/" target="_blank">Design av Sebastian Selling</a></p>
 </section>
 <!-- POPUP WITH LINKS TO NEWSLETTER TEXTS -->
  <div class="popup hidden" data-popup-id="docs" id="docs">
