Revert "Tried updating the pages with https links instead of http"
This reverts commit 4c076b11e0b20210743d1bf9d291d5a9520f22dd.

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -450,7 +450,7 @@ Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
 	            </li>
 							<!-- info card 2 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="https://nordic.se" target="_blank" class="box-74">
+	              <a href="http://nordic.se" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
 	                  <img src="../assets/img/logos/dokument/nordicforsakring_logo.png" class="center center-m-down" alt="Nordic Färskring och Riskhantering"/>
 	                </div>
@@ -535,7 +535,7 @@ Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
 	            </li>
 							<!-- info card 4 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="https://maklarsamfundet.se" target="_blank" class="box-74">
+	              <a href="http://maklarsamfundet.se" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
 	                  <img src="../assets/img/logos/dokument/maklarsamfundet_logo.png" class="center center-m-down" alt="Mäklarsamfundet"/>
 	                </div>
@@ -647,7 +647,7 @@ Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
 	            </li>
 							<!-- info card 12 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="https://www.tib.se/" target="_blank" class="box-74">
+	              <a href="http://www.tib.se/" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
 	                  <img src="../assets/img/logos/dokument/takentreprenorerna_logo.png" class="center center-m-down" alt="Tak och tätskiktsentreprenörernas branschorganisation i sverige"/>
 	                </div>
@@ -661,7 +661,7 @@ Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
 	            </li>
 							<!-- info card 12 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="https://www.tmf.se/" target="_blank" class="box-74">
+	              <a href="http://www.tmf.se/" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
 	                  <img src="../assets/img/logos/dokument/tmf_logo.png" class="center center-m-down" alt="Trä-och möbelföretagen"/>
 	                </div>
