--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -488,7 +488,7 @@
 							Redo att boka?
 							<p class="small bold dark margin-0 common-BodyText" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
 						</h3>
-						<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/vHXN4C" data-transparency="100" data-hide-headers=true style="width: 100%; height: 400px;"></div>
+						<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/Xyfx6y" data-hide-footer=true style="width: 100%; height: 400px;"></div>
 						<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 
 				</div>
