Made a typeform specifically for brf page

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -622,20 +622,6 @@
 							<br> • Gårdshus-återvinning-källsortering
 						</p>
 					</div>
-					<!-- <br>
-					<br>
-					<div class="fix-10-12 left margin-bottom-3">
-						<h3 class="margin-0">Redo att sätta igång?</h3>
-						<p class="micro margin-0">Enklaste sättet är att fylla i vårt kontaktformulär så hör vi av oss.</p>
-						<br>
-						<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Fyll i kontaktformuläret</a>
-						<script>
-							!function(){var e,t,a,l,s=document,r=s.getElementById,c=s.createElement,n=s.getElementsByTagName,m="typef_orm_share",o="https://s3-eu-west-1.amazonaws.com/share.typeform.com/";r.call(s,m)||((t=c.call(s,"script")).id=m,t.src=o+"share.js",(a=n.call(s,"script")[0]).parentNode.insertBefore(t,a)),m+="_",r.call(s,m)||((e=c.call(s,"link")).rel="stylesheet",e.id=m,e.href=o+"share-button.css",(l=n.call(s,"head")[0]).appendChild(e,l))}();
-						</script>
-						<br>
-						<br>
-						<a href="tel:0101654000" class="bold text-blue">Alternativt ring oss på: 010-165 40 00</a>
-					</div> -->
 
 				</div>
 			</div>
@@ -648,7 +634,7 @@
 							Redo att boka?
 							<p class="small bold dark margin-0 common-BodyText" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
 						</h3>
-						<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/vHXN4C" data-transparency="100" data-hide-headers=true style="width: 100%; height: 400px;"></div>
+						<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/DAizaS" data-hide-footer=true style="width: 100%; height: 400px;"></div>
 						<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 				</div>
 				<div class="secondary-column">
