--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -194,7 +194,8 @@
 							<h3 class="pad-header margin-0 text-blueGrey">
 								Kontaktformulär
 							</h3>
-							<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-hide-footer=true style="width: 100%; height: 400px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+							<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-hide-footer=true style="width: 100%; height: 400px;"></div>
+							<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 							<div class="pad-header">
 								<a class="text-blue popupTrigger small bold underlined" data-popup-id="contactInfo">Söker du en specifik person?</a>
 							</div>
