Updated old meta data on the projects page

--- a/projekt/index.html
+++ b/projekt/index.html
@@ -2,26 +2,28 @@
 <html lang="se">
 
 <head>
-	<title>Besiktningsman.se | Publicerat</title>
+	<title>Besiktningsman.se | Projekt</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
+	<meta name="description" content="En översikt av projekt som är besiktade av Besiktningsman.se" />
 	<meta name="robots" content="noodp" />
-	<link rel="canonical" href="https://www.besiktningsman.se/nyheter" />
+	<link rel="canonical" href="https://www.besiktningsman.se/projekt" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Vi är ett fristående besiktningsföretag som utför besiktningar objektivt och opartiskt enligt gällande bygg- och branschregler." />
-	<meta property="og:description" content="Nyheter från Besiktningsman.se" />
-	<meta property="og:url" content="https://www.besiktningsman.se/nyheter" />
-	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
+	<meta property="og:url" content="https://www.besiktningsman.se/projekt" />
+	<meta property="og:site_name" content="Besiktningsman.se | Projekt">
 	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
+	<meta property="og:title" content="Översikt av våra projekt" />
+	<meta property="og:description" content="Projekt besiktade av Besiktningsman.se" />
+
+
 	<meta name="twitter:card" content="summary" />
-	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
-	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
+	<meta name="twitter:title" content="Översikt av våra projekt" />
+	<meta name="twitter:description" content="Projekt besiktade av Besiktningsman.se" />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 	<!-- Styles -->
