updated news page menu with the latest blog post

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -185,6 +185,9 @@
 									Besiktningsbloggen
 								</h3>
 								<div class="margin-left-2">
+									<a href="https://medium.com/besiktningsbloggen/v%C3%A4lkommen-till-besiktningsbranschens-och-byggbranschens-nya-guld%C3%A5lder-a6b6a0ac238b">
+										<p class="common-Link">Välkommen till besiktningsbranschens (och byggbranschens) nya guldålder!</p>
+									</a>
 									<a href="https://medium.com/besiktningsbloggen/sluta-betala-oss-de0640a6b6c9">
 										<p class="common-Link">Sluta betala oss!</p>
 									</a>
