Updated the font link from google and removed the old one that called for the icon package, to simplify things

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -23,7 +23,8 @@
 	<meta name="twitter:description" content="Här kan du läsa våra blogg-inlägg samt nyhetsbrev" />
 	<meta name="twitter:title" content="Nyheter från Besiktningsman.se" />
 	<!-- Fonts and Material Icons -->
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
+
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- Google Tag Manager -->
