--- a/404/index.html
+++ b/404/index.html
@@ -23,7 +23,8 @@
 	<meta name="twitter:description" content="404 - Sidan finns inte. Gå tillbaka till huvudsidan för att komma vidare." />
 	<meta name="twitter:title" content="Sidan du besökte finns inte." />
 	<!-- Fonts and Material Icons -->
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
+
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- Google Tag Manager -->
