--- a/dokument/index.html
+++ b/dokument/index.html
@@ -22,7 +22,8 @@
 	<meta name="twitter:title" content="Här kan du läsa viktigt utbildningsmaterial gällande besiktningar" />
 	<meta name="twitter:description" content="Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till." />
 	<!-- Fonts and Material Icons -->
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
+
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- Google Tag Manager -->
