--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -23,7 +23,8 @@
 	<meta name="twitter:title" content="Besiktning för privatpersoner som skall bygga, ändra eller kontrollera husets skick." />
 	<meta name="twitter:description" content="För dig som ska bygga nytt, bygga till eller bygga om, erbjuder vi alla typer av opartiska besiktningstjänster samt även KA-Kontrollansvarig." />
 	<!-- Fonts and Material Icons -->
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
+
 	<!-- Styles -->
 	<link href="../../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- accordion styling -->
