--- a/dokument/index.html
+++ b/dokument/index.html
@@ -23,6 +23,8 @@
 	<meta name="twitter:description" content="Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till." />
 	<!-- Fonts and Material Icons -->
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+
 
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
