--- a/helhetskoncept/index.html
+++ b/helhetskoncept/index.html
@@ -50,6 +50,8 @@
 	/>
 	<!-- Fonts and Material Icons -->
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+
 
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
