--- a/slideshow/index.html
+++ b/slideshow/index.html
@@ -10,6 +10,8 @@
 	<link rel="shortcut icon" href="../favicon.ico">
 	<!-- Fonts and Material Icons -->
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+
 
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
