--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -24,6 +24,8 @@
 	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
 	<!-- Fonts and Material Icons -->
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+
 
 	<!-- Styles -->
 	<link href="../../css/slides.css" rel="stylesheet" type="text/css">
