--- a/tjanster/entreprenad/forbesiktning/index.html
+++ b/tjanster/entreprenad/forbesiktning/index.html
@@ -24,6 +24,8 @@
 	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+
 
 	<!-- Styles -->
 	<link href="../../../css/slides.css" rel="stylesheet" type="text/css">
