--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -24,6 +24,8 @@
 	<meta name="twitter:description" content="För dig som ska bygga nytt, bygga till eller bygga om, erbjuder vi alla typer av opartiska besiktningstjänster samt även KA-Kontrollansvarig." />
 	<!-- Fonts and Material Icons -->
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+
 
 	<!-- Styles -->
 	<link href="../../css/slides.css" rel="stylesheet" type="text/css">
